--- a/src/locales/uk/settings.json
+++ b/src/locales/uk/settings.json
@@ -1,4 +1,16 @@
 {
   "title": "Налаштування",
-  "save": "Зберегти"
+  "save": "Зберегти",
+  "webhookEndpointUrl": "Webhook endpoint url",
+  "regenerate": "Перегенерувати",
+  "appDescription": "Застосунок \"Інтеграція Uspacy з формами Webflow\" - це важливий інструмент для оптимізації та автоматизації вашого бізнесу, особливо якщо ви використовуєте форми на платформі Webflow і прагнете ефективно керувати лідами та угодами. Цей інтеграційний застосунок  дозволяє автоматично передавати дані з форм Webflow безпосередньо до вашої системи CRM в Uspacy.",
+  "autoSendData": "Автоматична передача даних: За допомогою цього застосунку, ви зможете налаштувати автоматичну передачу даних про клієнтів в  CRM з веб-сайту на Webflow. Це зберігає час і усуває потребу у ручній обробці даних.",
+  "here": "тут",
+  "instructionsForWebFlow": "Інструкція для підключення",
+  "anyQuestions": "Якщо у вас є будь-які питання або ви виявили певні недоліки у функціоналі даної інтеграції, команда AlterEGO готова надати вам консультацію та допомогу.",
+  "phoneTitle": "Звертайтеся за телефоном ",
+  "orEmail": "або електронною поштою на адресу ",
+  "helpYou": "і ми з радістю вам допоможемо знайти оптимальне рішення для вашого бізнесу.",
+  "replicate": "Копіювати",
+  "copied": "Скопійовано"
 }
